--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=catalog
+
+## MYSQL CONNECTION ##
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/catalog?createDatabaseIfNotExists=true
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+
+
+## MONGO DB CONNECTION ##
+spring.data.mongodb.uri=${MONGODB_URI}
